# fermat

./: .code-workspace  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Classification with Fermat.ipynb  Makefile  Playground.ipynb  README.md  X_n Graph.ipynb  install.sh  plan.lyx  plan.tex  pyproject.toml  requirements.in  tesis.lyx  tesis.tex
bib/: Notas.md  references.bib
docs/: abstract-seminario-modesto.txt  analisys.typ  caratula.typ  figuras-y-tablas-new.ipynb  figuras-y-tablas.ipynb  mi-tabla.typ  otros-datasets.ipynb  plan.lyx  plan.tex  plan.typ  poster-template.typ  poster.typ  references.bib  resultados.typ  resumen-poster.md  resumen.typ  sandbox-modesto.ipynb  sanity-check.json  seminario-modesto.typ  tesis.lyx  tesis.tex  tesis.typ  typst-poster.typ
docs/data/: 2-blobs.csv  anteojos-r2-highlights.json  best_params-2d-lo-new.json  best_params-2d-lo.json  circulos_hi-r2-highlights.json  circulos_lo-r2-highlights.json  digitos-r2-highlights.json  eslabones_0-params-2411.csv  eslabones_0-r2-highlights.json  eslabones_12-r2-highlights.json  espirales_hi-r2-highlights.json  espirales_lo-r2-highlights.json  exac-ds-2d-hi-new.csv  exac-ds-2d-new.csv  exac-ds-2d.csv  helices_0-parametros_comparados-kdc.csv  helices_0-r2-highlights.json  helices_12-r2-highlights.json  hueveras_0-parametros_comparados-kdc-top3.csv  hueveras_0-parametros_comparados-kdc.csv  hueveras_0-parametros_comparados-kn-mismo_k.csv  hueveras_0-parametros_comparados-kn.csv  hueveras_0-r2-highlights.json  hueveras_12-r2-highlights.json  iris-r2-highlights.json  lunas_hi-r2-highlights.json  lunas_lo-best_params.csv  lunas_lo-best_test_params.csv  lunas_lo-r2-highlights.json  mejor-clf-por-dataset-segun-accuracy-mediano.csv  mejor-clf-por-dataset-segun-r2-mediano.csv  mnist-r2-highlights.json  pinguinos-r2-highlights.json  (+7 more)
fkdc/: __init__.py  algoritmos.py  config.py  datasets.py  eyeglasses.py  fermat.py  main.py  process.py  tarea.py  tareas.py  utils.py  viz.py
notebooks/: 00. Primer Acercamiento a Clasificacion con Fermat.ipynb  01. Chequeo de Sanidad: Distancia de Fermat con fermat y networkx.ipynb  02. Comprendiendo factores de escala para Distancia de Fermat.ipynb  03. KDEClassifier - Un clasificador por KDE para sklearn.ipynb  04. Chequeo de Sanidad: EuclideanKDE y KernelDensity.ipynb  05. Juntandolo todo.ipynb  06. Consideraciones sobre el computo aproximado de la distancia muestral de fermat.ipynb  07. FermatKDE y FermatKDClassifier.ipynb  08. Experimentos.ipynb  A. Classification with Fermat.ipynb  main.py
(+8 files in other folders)
