[tool.poetry]
name = "fkdc"
version = "0.0.1"
description = "Distancia de Fermat en Clasificadores de Densidad Nuclear"
authors = ["Gonzalo Barrera Borla <gonzalobb@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.12.0"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
lightgbm = "^4.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
