[tool.poetry]
name = "fkdc"
version = "0.0.1"
description = "Distancia de Fermat en Clasificadores de Densidad Nuclear"
authors = ["Gonzalo Barrera Borla <gonzalobb@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.12.0"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
ucimlrepo = "^0.0.7"
tabulate = "^0.9.0"
click = "^8.1.7"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.2"
ipykernel = "^6.29.3"
matplotlib = "^3.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

# Para PyLance
[tool.pyright]
exclude = ["datasets/**", "configs/**", "infos/**", "runs/**", ".cache/**", "venv/**"]

reportArgumentType = "information"