[project]
name = "fkdc"
version = "0.0.1"
description = "Distancia de Fermat en Clasificadores de Densidad Nuclear"
authors = [{name = "Gonzalo Barrera Borla", email = "gonzalobb@gmail.com"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "pandas>=2.2.1",
    "scikit-learn>=1.4.1.post1",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
    "tabulate>=0.9.0",
    "click>=8.1.7",
    "typer>=0.12.5",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.6.2",
    "ipykernel>=6.29.3",
    "matplotlib>=3.10.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
